# carvera-vision

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.planning/: PROJECT.md  ROADMAP.md
src/carvera_vision/: __init__.py  server.py  step_parser.py  tool_library.py  window_capture.py
tools/carvera/: Makera_Ball_Endmills.csv  Makera_Drill_Bits.csv  Makera_O_Flute_Bits.csv
