[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carvera-vision"
version = "0.1.0"
description = "MCP server for Carvera CNC — screen vision + STEP geometry analysis. Works with Claude Desktop and Claude Code."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
    "mss>=9.0.0",
    "pygetwindow>=0.0.9",
    "pyautogui>=0.9.54",
]

[project.scripts]
carvera-vision = "carvera_vision.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carvera_vision"]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.0",
    "ruff>=0.4.0",
]
